<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/navigation_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_about"
        app:showAsAction="always"/>


        <group
            android:id="@+id/clearDataGroup"
            >

            <item
                android:title="Clear data"
                android:id="@+id/clearData"
                android:icon="@drawable/ic_delete"
                />

        </group>
</menu>