<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:paddingTop="?android:attr/actionBarSize">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:tabMode="fixed"
        app:tabSelectedTextColor="?attr/colorSecondary"
        app:tabIndicatorColor="?attr/colorSecondary"
        app:tabIconTint="@color/pager_icon_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <include
        android:id="@+id/bottom_tool_bar"
        layout="@layout/app_bar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>